--- a/13-ProyectoFinal/css/style.css
+++ b/13-ProyectoFinal/css/style.css
@@ -1,7 +1,3 @@
-div {
-  margin-bottom: 2rem;
-}
-
 .btn-main, .btn-main-s {
   padding: 0.5rem 2rem;
   border-radius: 0.25rem;
@@ -36,6 +32,9 @@ div {
   padding: 0.1rem 1rem;
 }
 
+.main-menu {
+  margin-bottom: 0rem;
+}
 .main-menu li {
   padding-inline-start: 0px;
   display: inline;
@@ -43,6 +42,13 @@ div {
   font-size: 1rem;
   margin: 0rem 0.5rem;
   font-weight: bold;
+}
+.main-menu li a {
+  color: #000;
+  text-decoration: none;
+}
+.main-menu li a:hover {
+  text-decoration: underline;
 }
 
 .icon-sm i {
@@ -93,6 +99,48 @@ div {
 .icon-desc {
   color: #0075ff;
   font-size: 8rem;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 4rem;
+  border-bottom: solid 1px #ddd;
+}
+
+.logo a img {
+  max-width: 7rem;
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.home .home-cta {
+  width: 25rem;
+}
+.home .home-cta .cta-text {
+  color: #0075ff;
+}
+.home .home-cta .home-title {
+  font-size: 4rem;
+}
+.home .home-cta .home-description {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+.home .home-img {
+  text-align: right;
+  width: 25rem;
 }
 
 /*# sourceMappingURL=style.css.map */
